bug overflow

--- a/sass/xdadmin.scss
+++ b/sass/xdadmin.scss
@@ -428,14 +428,11 @@ html:not(.ms-dialog-nr){
     		table-layout: fixed\9;
     		width:100%\9;
 		}
-		.ms-listviewtable tbody{
-			width:100% !important\9; /*IE8+9 */
-		}
 		tbody, tr{
 			width: auto !important;
 			display: block;
 			float: left\9; /* IE8+9  */
-			
+			width:100% !important\9; /*IE8+9 */
 		}
 		td{
 			line-height: 30px;
@@ -794,3 +791,17 @@ html:not(.ms-dialog-nr){
 	}
 }
 }
+
+
+@include tablet-landscape-and-below{
+	body.system .s4-ca {
+    overflow-x: visible !important;
+    min-height:1px;
+	}
+
+
+	html:not(.ms-dialog-nr) body.xd #main-content {
+    	overflow: visible !important;
+    	min-height:1px;
+	}
+};
